Bug 424356 - Desktop objects are sometimes not dodging the panel on startup and icon painting not working
Summary: Desktop objects are sometimes not dodging the panel on startup and icon paint...
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: git (master)
Platform: Manjaro Linux
: NOR minor
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-18 07:17 UTC by jan.claussen10
Modified: 2021-03-08 19:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jan.claussen10 2020-07-18 07:17:33 UTC
SUMMARY
The icons are sometimes not dodging the panel. Sometimes it works, sometimes it doesn't. No idea why.

STEPS TO REPRODUCE
1. Restart your system

OBSERVED RESULT
The icons are not dodging the dock spontaneously

EXPECTED RESULT
They should always dodge

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.19.2
KDE Frameworks Version: 5.71.0
Qt Version: 5.15.0
Comment 1 Michail Vourlakos 2020-07-18 07:24:09 UTC
1. Show me a screenshot, and which icons?
Comment 2 jan.claussen10 2020-07-19 15:09:33 UTC
I meant the Desktop object. My description was not very precise https://i.imgur.com/Z4PTBBs.png
Comment 3 Michail Vourlakos 2020-07-19 18:06:38 UTC
If you close Latte and start it again, it works OK afterwards?
Comment 4 jan.claussen10 2020-07-19 20:16:44 UTC
No, it doesn’t make a difference. I just tried it
Comment 5 Michail Vourlakos 2020-07-19 22:44:17 UTC
If you run Latte from cmd with, latte-dock -d you should get an output that plasma was informed about geometries, do you get any such output? Especially when you switch between different running activities.

2. How did you install Latte git version?
Comment 6 Michail Vourlakos 2021-03-06 16:50:32 UTC
how can I reproduce this in my system?
Comment 7 jan.claussen10 2021-03-06 23:02:29 UTC
Didn’t see your previous message. No idea how to reproduce it. Sometimes it works, sometimes it doesn’t. I can fix it by killing plasmashell and Latte. After restarting both it usually works. Might be related to Plasma. Will give you the demanded info tomorrow.
Comment 8 jan.claussen10 2021-03-07 08:44:15 UTC
So I just ran the debug output: https://pastebin.com/ZUJ2Htbm
There are some lines referring to a "wrong location" of the geometry in line 127-128 for example. Is that what you mean?

I also realized that when the icons are not dodging, the icon painting is  also not working. I just restarted Latte and it is not the issue. It is dissolved after plasmashell is restarted.

I ran latte-dock -d again and the output looks just the same https://pastebin.com/AnX5sDaM
Comment 9 jan.claussen10 2021-03-07 08:47:58 UTC
Maybe plasmashell is started before some relevant service is up? Which service could that be? Just an assumption... I will file a bug in plasmashell and link it to this one.
Comment 10 jan.claussen10 2021-03-07 08:55:07 UTC
Linking here as well https://bugs.kde.org/show_bug.cgi?id=434094
Comment 11 Michail Vourlakos 2021-03-07 09:43:40 UTC
Git commit 01eb69bbe5f6f19f9494de4ca0ea158a10b4435d by Michail Vourlakos.
Committed on 07/03/2021 at 09:43.
Pushed by mvourlakos into branch 'master'.

update desktop geometry on startup

--when Plasma is started much later than Latte
the Plasma::Extended::ScreenGeometries should enable
its broadcasting interface when Plasma is first
registered in DBus

M  +11   -2    app/plasma/extended/screengeometries.cpp
M  +3    -0    app/plasma/extended/screengeometries.h

https://invent.kde.org/plasma/latte-dock/commit/01eb69bbe5f6f19f9494de4ca0ea158a10b4435d
Comment 12 Michail Vourlakos 2021-03-07 09:44:31 UTC
that should fix the desktop icons issue.. if the painting issue is still valid please open a new bug report with details how to reproduce.
Comment 13 jan.claussen10 2021-03-08 15:40:04 UTC
I has not changed anything unfortunately.
Comment 14 Michail Vourlakos 2021-03-08 16:32:10 UTC
(In reply to jan.claussen10 from comment #13)
> I has not changed anything unfortunately.

works perfectly in my system
Comment 15 jan.claussen10 2021-03-08 19:49:19 UTC
I believe you. Think it is related
to plasmashell and maybe some settings I made. From experience most bugs I find are no Latte bugs anyway ;) We‘ll see if the dev from plasma finds something