update desktop geometry on startup

--when Plasma is started much later than Latte
the Plasma::Extended::ScreenGeometries should enable
its broadcasting interface when Plasma is first
registered in DBus

BUG:424356